--- a/theme_scrollbar.css
+++ b/theme_scrollbar.css
@@ -192,35 +192,35 @@
 .scroller.guild-channels::-webkit-scrollbar {
     background: rgba(225, 225, 225, 0.05)!important;
     width: 6px!important;
-    display:block;
+    display: block
 }
 .scroller.guild-channels::-webkit-scrollbar-thumb:hover,
 .scroller.guild-channels::-webkit-scrollbar-thumb {
-    border: none !important;
-    background-color: rgba(225, 225, 225, 0.1) !important;
+    border: none!important;
+    background-color: rgba(225, 225, 225, 0.1)!important;
     display: initial;
-    border-radius: 0!important;
+    border-radius: 0!important
 }
 .scroller.guild-channels::-webkit-scrollbar-thumb:active {
-    border: none !important;
-    background-color: rgba(225, 225, 225, 0.2) !important;
+    border: none!important;
+    background-color: rgba(225, 225, 225, 0.2)!important;
     display: initial;
     border-radius: 0!important
 }
 .channel-members::-webkit-scrollbar {
-    border: none!important
+    border: none!important;
     background: rgba(225, 225, 225, 0.05);
     width: 8px!important
 }
 .channel-members-wrap .scroller-wrap .channel-members::-webkit-scrollbar-thumb {
-    border: none !important;
-    background-color: rgba(225, 225, 225, 0.2) !important;
+    border: none!important;
+    background-color: rgba(225, 225, 225, 0.2)!important;
     display: initial;
     border-radius: 0!important
 }
 .channel-members-wrap .scroller-wrap .channel-members::-webkit-scrollbar-thumb:active {
-    border: none !important;
-    background-color: rgba(225, 225, 225, 0.4) !important;
+    border: none!important;
+    background-color: rgba(225, 225, 225, 0.4)!important;
     display: initial;
     border-radius: 0!important
 }
