--- a/theme_messages.css
+++ b/theme_messages.css
@@ -24,7 +24,9 @@
 }
 .message-group .comment .markup code.inline,
 .theme-dark .message-group .comment .markup code.inline,
-.theme-dark .message-group .comment .markup pre code {
+.theme-dark .message-group .comment .markup pre code,
+.theme-dark .message-group .comment .markup pre,
+.message-group .comment .markup pre {
     background: #111;
     border-radius: 0
 }
